--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,9 +14,12 @@
         android:theme="@style/Theme.SatelliteImageProcessing"
         tools:targetApi="31">
         <activity
+            android:name=".GetFarmDetails"
+            android:exported="false" />
+        <activity
             android:name=".MapsActivity"
             android:exported="true"
-            android:label="@string/title_activity_maps"></activity>
+            android:label="@string/title_activity_maps" />
         <!--
              TODO: Before you run your application, you need a Google Maps API key.
 
