--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="com.example.satelliteimageprocessing">
-
+    <uses-permission android:name="android.permission.INTERNET" />
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -18,6 +18,9 @@
             android:exported="false" />
         <activity
             android:name=".GetFarmDetails"
+            android:exported="false" />
+        <activity
+            android:name=".FarmDetails"
             android:exported="false" />
         <activity
             android:name=".MapsActivity"
