--- a/local.properties
+++ b/local.properties
@@ -4,6 +4,6 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue Jun 21 22:42:17 IST 2022
-sdk.dir=C\:\\Users\\Chirag Jaju\\AppData\\Local\\Android\\Sdk
+#Mon Jul 18 10:28:36 IST 2022
+sdk.dir=C\:\\Users\\KHOOSHRIN\\AppData\\Local\\Android\\Sdk
 MAPS_API_KEY=AIzaSyChuOc6lGI8saiBHy7TYJKkpvS9MUdAYKo
